# news_harness

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LEGACY.md  README.md  docker-compose.hostinger.yml  docker-compose.yml  pyproject.toml
.taiyi/: activity.jsonl
configs/: Caddyfile  all_source_runner.example.json  all_source_runner.json  deepseek_provider.example.json  deepseek_provider.json  outcome_thresholds.v1.json  platform_metrics.v1.json  secrets.example.env  secrets.vps.env  source_runner_runtime.example.json  vps_auth_gated_sources.example.json  xueqiu_blocklist.candidates.json  xueqiu_blocklist.json
docker/: Caddyfile  Dockerfile.caddy  news_harness.env
docs/: MCP_CONNECTOR.md  OPERATIONS.md  SECURITY_OPS_CHECKLIST.md  index.html
fixtures/: image_reference_manifest.json  revisit_schedule.json  rolling_source_schedule.json  sample_all_source_runner_dry_run.json  sample_candidate.json  sample_connector_readiness_matrix.json  sample_connector_result.json  sample_context_manifest.json  sample_deepseek_scoring_fixture.json  sample_eval.json  sample_evidence.json  sample_improvement_proposal.json  sample_outcome.json  sample_prediction.json  sample_promotion_decision.json  sample_radar_timeline_feed.json  sample_real_smoke_candidate_plan.json  sample_replay_manifest.json  sample_run_config.json  sample_shadow_source_fetch_result.json  sample_source.json  sample_source_pool_intake.json  sample_source_registry.json  sample_source_score.json  sample_source_smoke_matrix.json  sample_source_smoke_result_public_web.json  (+8 more)
(+133 files in other folders)
